# Tavern

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: dependencies.cmake  tavern.cmake
data/shaders/: gui_passthrough.vert  pbr.vert
data/shaders/glsl/: glsl_shaders.hpp.in  gui_blend_mask.frag  gui_blur.frag  gui_blur.vert  gui_colour.frag  gui_colour_matrix.frag  gui_creation.frag  gui_drop_shadow.frag  gui_gradient.frag  gui_main.vert  gui_passthrough.frag  gui_passthrough.vert  gui_texture.frag  pbr.frag  text.frag
include/cantrip/analyzer/: environment.h  semantic.h
include/cantrip/ast/: ast_expr.h  ast_stmt.h  module.h  node.h  visitor.h
include/cantrip/ast/expression/: binary.h  cast.h  expression.h  identifier.h  literal.hpp  type_check.h  unary.h
include/cantrip/ast/statement/: block.h  component.h  for_stmt.h  function.h  if_else.h  struct.h  system.h  type.h  var_declare.h  while_stmt.h
include/cantrip/error/: exception.h  semantic_error.h  syntax.h
include/cantrip/module/: info.h  module.h
include/cantrip/parser/: parser.h  scope.h  syntax_error.h
include/cantrip/parser/ast/: ast_stmt.h  node.h  visitor.h
include/cantrip/parser/ast/expression/: binary.h  call.h  core_type.h  expression.h  grouping.h  identifier.h  literal.hpp  unary.h
include/cantrip/parser/ast/statement/: block.h  component.h  expr_stmt.h  flow.h  for_stmt.h  function.h  if_else.h  return_stmt.h  statement.h  struct.h  type.h  var_declare.h  while_stmt.h
include/cantrip/runtime/: object.h  tree_walk_interpreter.h
include/cantrip/scanner/: file_interface.h  file_pos.h  scanner.hpp  token.h
include/ecs/: ecs.h
include/ecs/config/: config.h
include/ecs/containers/: amorphic_vector.hpp  amorphic_vector_wrapper.hpp  component_container.hpp  sparse_map.hpp  sparse_map_wrapper.hpp  sparse_set.hpp
include/ecs/core/: type.hpp  typeinfo.hpp
include/ecs/entity/: entity.h  registry.hpp  type.hpp  view.hpp
include/file/: idir.h  ifile.h  imount.h  path.h  physical_dir.h  physical_mount.h  tpk_dir.h  tpk_file.h  tpk_mount.h  virtual_dir.h  virtual_file.h  virtual_mount.h
include/file/tpk/: tpk.h  tpk_package.h
include/tavern/: tavern.h  window.h
include/tavern-bin/panels/: cantrip.h  file_system.h  performance.h  scene.h
include/tavern/assets/: pipeline.h
include/tavern/components/: camera.h  component.h  component_yaml_conversions.h  component_yaml_conversions.hpp  drawable3d.h  entity_name.h  gui_comp.h  render_mesh.h  transform.h  transform3d.h
include/tavern/core/: cantrip.h  engine.h  file_system.h  gui.h  input.h  resource_manager.h  scene.h  window.h
include/tavern/file/: ifile.h  imount.h  pak_mount.h  path.h  physical_file.h  physical_mount.h  tpk.h  tpk_file.h  tpk_mount.h  virtual_file.h  virtual_mount.h
include/tavern/file/tpk/: tpk.h
include/tavern/graphics/: a_renderer.h  font.h  graphics.h  gui_render_interface.h  imgui_panel.h  material.h  mesh.h  opengl_renderer.h  opengl_renderer.hpp  renderer.h  shader.h  texture.h  texture2d.h  vertex.h
include/tavern/graphics/generic/: material.h  mesh.h  renderer.h  texture.h
include/tavern/graphics/opengl/: font.h  gui_render_interface.h  mesh.h  mesh.hpp  render_mesh.h  render_mesh.hpp  renderer.hpp  shader.h  texture2d.h  texture2d.hpp  texture_atlas.h  vertex_array.h
include/tavern/gui/: anchor.h  bounds.h  container.h  control.h  label.h  text.h
include/tavern/maths/: vector2.hpp  vector3.hpp  vector4.hpp
include/tavern/platform/: sdl.h
include/tavern/resource/: font_manager.hpp  fwd.h  material_manager.h  mesh_manager.h  resource_manager.h  resource_ptr.hpp  resource_type_manager.hpp  shader_manager.hpp  texture2d_manager.h
include/tavern/resource/util/: assimp_io.h  file.hpp  obj_loader.h  read_file.hpp
include/tavern/systems/: gui.h  scene.h  scene_tree.h
include/tavern/util/: read_file.hpp
shaders/: basic.frag  basic.vert  basic.yml  pbr.frag  pbr.hpp.in  pbr.vert  pbr.yml  text.vert
src/cantrip-bin/: main.cpp
src/cantrip/analyzer/: environment.cpp  semantic.cpp
src/cantrip/ast/: visitor.cpp
src/cantrip/ast/expression/: identifier.cpp  literal.cpp
src/cantrip/ast/statement/: struct.cpp  type.cpp  var_declare.cpp
src/cantrip/error/: exception.cpp  semantic_error.cpp
src/cantrip/module/: info.cpp
src/cantrip/parser/: parser-expr.cpp  parser-stmt.cpp  parser.cpp
src/cantrip/parser/ast/: node.cpp  visitor.cpp
src/cantrip/parser/ast/expression/: literal.cpp
src/cantrip/runtime/: object.cpp  tree_walk_interpreter.cpp
src/cantrip/scanner/: file_interface.cpp  file_pos.cpp  scanner.cpp  token.cpp
src/file/: idir.cpp  path.cpp  physical_dir.cpp  physical_file.cpp  physical_mount.cpp  tpk_dir.cpp  tpk_file.cpp  tpk_mount.cpp  virtual_dir.cpp  virtual_file.cpp  virtual_mount.cpp
src/file/tpk/: tpk_package.cpp
src/tavern/: tavern.cpp  window.cpp
src/tavern-bin/: asset_pipeline.cpp  main.cpp
src/tavern-bin/panels/: cantrip.cpp  file_system.cpp  performance.cpp  scene.cpp
src/tavern/assets/: converters.h  model_convert.cpp  pipeline.cpp
src/tavern/components/: camera.cpp  component_yaml_conversions.cpp  drawable3d.cpp  render_mesh.cpp  transform.cpp  transform3d.cpp
src/tavern/core/: cantrip.cpp  engine.cpp  file_system.cpp  gui.cpp  input.cpp  scene.cpp  scene_load.cpp  scene_save.cpp  window.cpp
src/tavern/file/: path.cpp  physical_file.cpp  physical_mount.cpp  tpk_file.cpp  tpk_mount.cpp  virtual_file.cpp  virtual_mount.cpp
src/tavern/file/tpk/: tpk_package.cpp
src/tavern/graphics/: opengl_renderer.cpp
src/tavern/graphics/generic/: renderer.cpp  texture.cpp
src/tavern/graphics/opengl/: font.cpp  gui_renderer_interface.cpp  mesh.cpp  render_mesh.cpp  renderer.cpp  shader.cpp  texture2d.cpp  texture_atlas.cpp  vertex_array.cpp
src/tavern/gui/: label.cpp
src/tavern/resource/: material_manager.cpp  mesh_manager.cpp  shader_manager.cpp  texture2d_manager.cpp
src/tavern/resource/util/: assimp_io.cpp  obj_loader.cpp
src/tavern/systems/: gui.cpp  scene.cpp  scene_tree.cpp
(+3 files in other folders)
